# easy_predict

./: .gitignore  README.md  metrics.py  metrics_callback.py  prediction_module.py  pyproject.toml  requirements.txt  run_checks.sh  run_format.sh  train.py  validate.py
common_utils/: agent_centric_to_scenario.py  geometry.py  metrics.py  tensor_utils.py  visualization.py
configs/: hyperparameters.yaml
data_utils/: convert_h5_to_files.py  convert_h5_to_preprocessed_h5.py  convert_proto_to_h5.py  convert_tf_example_to_h5.py  data_augmentation.py  data_module.py  feature_description.py  feature_generation.py  parallel_executor.py  preprocess_dataset.py  preprocess_dataset_proto.py  processed_dataset.py  proto_decoding.py  waymo_dataset.py
data_utils/tests/: test_parallel_executor.py  test_proto_decoding.py
models/: attention.py  inference.py  modules.py  multi_context_gating.py  multiheaded_attention.py  multipath_based.py  pl_module.py  pointnet_encoder.py  polyline_encoder.py  position_embeddings.py  prediction.py  rnn_cells.py
scripts/: process_data.py  train.py  validate.py
training_utils/: data_module.py  pl_module.py
utils/: agent_centric_to_scenario.py  geometry.py  metrics.py  metrics_callback.py  tensor_utils.py  visualization.py
utils/tests/: test_geometry.py
waymo_loader/: dataloaders.py  dataset.py  feature_description.py  waymo_converter.py
waymo_loader/data_augmentation/: data_augmentation.py
